--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paytm-insider",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://cvvkshcv.github.com/image-crop-and-upload-top-cloud",
+  "homepage": "https://cvvkshcv.github.io/image-crop-and-upload-top-cloud",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
